# gists

./: .travis.yml  README.md  gists.cabal
.github/workflows/: haskell-ci.yml
src/: CoercibleGenerics.hs  CoercibleGenericsAbstract.hs  Decidable.hs  DependentComposition.hs  ElimNat.hs  ExcludingEq.hs  GADTSingletons.hs  GPMP.hs  GenericForAllGADTs.hs  HListShorthand.hs  IdleThoughtsOnGADTsAsNewtypes.hs  LousyDependentComposition.hs  S.hs  SGenericDecide.hs  SGenericSingKind.hs  SGenericSingKindAlt.hs  SingIForTyCons.hs  SubstRep1.hs  TypeLevelGlambda.hs  VecShorthand.hs  WorkingAroundT12564.hs
